# hf-llm

./: .env.example  .gitignore  README.md  hw2.py  main.py  nb.ipynb  pyproject.toml  test.py
notebooks/: hw2.ipynb  hw3.md  hw4.ipynb  nb.ipynb
notebooks/results/: ground_truth.json
src/: flask_app.py  rag.py
src/chunking/: chunker.py
src/config/: settings.py
src/embeddings/: embedder.py  embedding.py
src/evaluation/: evaluation.py
src/ingestion/: loader.py
src/llm/: __init__.py  base_llm.py  gemini_llm.py  llm_client.py  openai.py  openai_llm.py
src/models/: document.py  question.py
src/prompts/: prompt_builder.py  prompt_templates.py
src/retrieval/: retriever.py
src/utils/: utils.py
src/vectordb/: vector_store.py
tests/: test_gemini_llm.py
