[project]
name = "hf-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "gitsource>=0.0.5",
    "google-genai>=2.10.0",
    "gradio>=6.19.0",
    "jupyter>=1.1.1",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.11.0",
    "minsearch>=0.1.1",
    "numpy>=2.4.4",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "pandas>=3.0.4",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.6.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers[sentencepiece]>=5.6.2",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.12.0",
    "jupyter>=1.1.1",
]
